# machine-learning-techniques

./: .gitignore  pyproject.toml
lab-10/: laboratorio_10_actividad.ipynb  laboratorio_10_practica.ipynb
lab-11/: laboratorio_11_actividad.ipynb  laboratorio_11_practica.ipynb
lab-2/: laboratorio_2_practica.ipynb
lab-3/: laboratorio_3_actividad.ipynb  laboratorio_3_practica.ipynb
lab-4/: laboratorio_4_actividad.ipynb  laboratorio_4_practica.ipynb
lab-5/: laboratorio_5_actividad.ipynb  laboratorio_5_practica.ipynb
lab-6/: laboratorio_6_actividad.ipynb  laboratorio_6_practica.ipynb
lab-7/: laboratorio_7_actividad.ipynb  laboratorio_7_pytorch.ipynb  laboratorio_7_tensorflow.ipynb
lab-8/: laboratorio_8_actividad.ipynb  laboratorio_8_tutorial.ipynb
project/: best_model.pt  project.ipynb
