[project]
name = "mlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.0",
    "notebook>=7.5.4",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "pynput>=1.8.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<82.0.0",
    "shap>=0.50.0",
    "tensorflow[and-cuda]>=2.21.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "xgboost>=3.2.0",
    "ydata-profiling>=4.18.1",
]
